Updated services page

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,6 +1,6 @@
-<div class="p-5 bg-light border rounded">
-    <h3 class="ff-serif mb-3 fw-bold">Contact Us</h3>
-    <div class="fs-5">
+<div class="p-5 bg-white text-danger border shadow shadow-sm rounded">
+    <h2 class="ff-serif mb-3 fw-bold">Contact Us</h2>
+    <div class="fs-4">
         <div>Phone: {{site.contacts.phone}}</div>
         <div>Email: {{site.contacts.email}}</div>
         <div>Address: {{site.contacts.address}}</div>
