--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,33 @@ layout: default
         </div>
     </div>
 </div>
-{% include services.html %}
+<div class="container">
+    <div class="row py-5">
+        <div class="col">
+            <div class="py-5">
+                {% include services.html %}
+                <div class="text-center">
+                    <a href="{{'/services/' | relative_url}}" class="btn btn-outline-danger text-uppercase">Learn
+                        more…</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="container-fluid bg-danger">
-    {% include features.html %}
+    <div class="container">
+        <div class="row py-5">
+            <div class="col">
+                {% include features.html %}
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row py-5">
+        <div class="col-12 offset-md-3 col-md-6">
+            {% include contact.html %}
+        </div>
+    </div>
 </div>
