--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,6 +5,7 @@ layout: default
     h1 {
         font-family: 'Playfair Display', serif;
         margin-bottom: 1em;
+        margin-top: 1em;
     }
 
     p {
@@ -16,6 +17,11 @@ layout: default
     <div class="row py-5">
         <div class="col-12 col-lg-8">{{content | markdownify}}</div>
     </div>
+    {% if page.show_services %}
+    <div class="row">
+        <div class="col-12 col-lg-8">{% include services.html %}</div>
+    </div>
+    {% endif %}
     {% if page.show_contact_form %}
     <div class="row">
         <div class="col-12 col-lg-8">{% include contact.html %}</div>
