Updated teams page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,29 +2,33 @@
 layout: default
 ---
 <div class="container">
-
-    <div class="row d-flex align-items-center">
-        <div class="col">
-            <div class="hero">
-                <h1 class="display-4 mb-3 fw-bold ff-serif">{{page.title}}</h1>
-                <p class="fs-5 text-muted">{{page.subtitle}}</p>
-                <a href="{{page.action_url | relative_url}}" class="btn btn-danger btn-lg">{{page.action}}</a>
+    <div class="py-5">
+        <div class="row d-flex align-items-center row-cols-1 row-cols-lg-2">
+            <div class="col order-lg-first order-last">
+                <div class="py-5 text-center text-md-start">
+                    <h1 class="display-4 mb-3 fw-bold ff-serif">{{page.title}}</h1>
+                    <p class="fs-5 text-muted">{{page.subtitle}}</p>
+                    <a href="{{page.action_url | relative_url}}" class="btn btn-danger btn-lg">{{page.action}}</a>
+                </div>
             </div>
-        </div>
-        <div class="col">
-            <img src="{{'assets/img/pcb.png' | relative_url}}" alt="" srcset="" class="img-fluid rounded shadow">
+            <div class="col order-first order-lg-last">
+                <div class="py-4">
+                    <img src="{{'assets/img/pcb.png' | relative_url}}" alt="" srcset=""
+                        class="img-fluid rounded shadow">
+                </div>
+            </div>
         </div>
     </div>
 </div>
 <div class="container-fluid bg-danger">
     <div class="container">
-        <div class="row d-flex align-items-center g-3">
-            <div class="col-5">
-                <img src="{{'assets/img/logo.png'}}" class="img-fluid">
+        <div class="row d-flex align-items-center row-cols-1 row-cols-lg-2">
+            <div class="col text-center">
+                <img src="{{'assets/img/logo.png'}}" class="img-fluid" style="max-height: 20em;">
             </div>
-            <div class="col-7 text-start">
+            <div class="col text-center text-lg-start">
                 <div class="py-5">
-                    <h2 class="mb-5 ff-serif text-danger">{{page.about_us_title}}</h2>
+                    <h2 class="mb-5 ff-serif text-danger fs-1">{{page.about_us_title}}</h2>
                     <p class="fs-5 mb-5 text-dark">{{page.about_us_description}}</p>
                     <a href="{{'about' | relative_url}}" class="btn btn-outline-danger text-uppercase">Learn more…</a>
                 </div>
@@ -33,7 +37,7 @@ layout: default
     </div>
 </div>
 <div class="container">
-    <div class="row py-5">
+    <div class="row">
         <div class="col">
             <div class="py-5">
                 {% include services.html %}
@@ -47,7 +51,7 @@ layout: default
 </div>
 <div class="container-fluid bg-danger">
     <div class="container">
-        <div class="row py-5">
+        <div class="row">
             <div class="col">
                 {% include features.html %}
             </div>
