--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,8 +1,8 @@
 <div class="p-5 bg-white text-danger border shadow shadow-sm rounded">
     <h2 class="ff-serif mb-3 fw-bold">Contact Us</h2>
-    <div class="fs-4">
-        <div>Phone: {{site.contacts.phone}}</div>
-        <div>Email: {{site.contacts.email}}</div>
-        <div>Address: {{site.contacts.address}}</div>
+    <div class="fs-4 text-dark">
+        <div>Phone: <span class="fw-bold">{{site.contacts.phone}}</span></div>
+        <div>Email: <span class="fw-bold">{{site.contacts.email}}</span></div>
+        <div>Address: <span class="fw-bold">{{site.contacts.address}}</span></div>
     </div>
 </div>
