--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,8 +7,11 @@
     <div class="container">
         <div class="row py-3 d-flex align-items-center">
             <div class="col">
-                <div class="fs-4 fw-bold text-danger ff-serif"><a href="{{'/' | relative_url}}"
-                        class="navbar-brand">{{site.title}}</a></div>
+                <div class="fs-4 fw-bold text-danger ff-serif">
+                    <a href="{{'/' | relative_url}}" class="navbar-brand">
+                        <img src="{{'assets/img/logo.svg' | relative_url}}" class="img-fluid logo">
+                    </a>
+                </div>
             </div>
             <div class="col">
                 <ul class="nav justify-content-end d-none d-sm-flex">
