--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 ---
-<div class="row">
+<div class="row mb-5">
     <div class="col">
         <h1>{{page.title}}</h1>
         <p>{{site.data.team.description}}</p>
@@ -11,13 +11,19 @@ layout: page
     {% for member in site.data.team.members %}
     <div class="col">
         <div class="p-3 bg-danger rounded">
-            <div class="row">
+            <div class="row mb-2 d-flex align-items-center">
                 <div class="col-4">
                     <img src="{{'assets/img/ceo.jpg' | relative_url}}" class="img-fluid">
                 </div>
                 <div class="col-8">
                     <h3 class="ff-serif text-danger">{{member.name}}</h3>
-                    <strong>{{member.designation}}</strong>
+                    <div class="fw-bold">{{member.designation}}</div>
+                    <a href="{{member.link.url}}" class="nav-link text-muted">{{member.link.title}}</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    {{member.description}}
                 </div>
             </div>
         </div>
